ebus Daemon (ebusd) - ChangeLog
===============================

2013-09-20:
* Removed unnecessary spaces located behind last return value. (thx JuMi2006 / KNX Forum)
* Removed more unneeded space characters. (thx JuMi2006 / KNX Forum)

2013-09-04:
* Fixed eb_recv_data_get function. (Replaced strncpy with memcpy.)

2013-08-26:
* Modified hex decode routine. (To set start/end point of data bytes.)
* Some cosmetic changes.

2013-05-28:
* Modified timeout statement, too force serial device reconnect. (thx aloz77 / KNX Forum)

2013-05-27:
* Added timeout to select at main_loop. (thx aloz77 / KNX Forum)

2013-05-25:
* Modified hex Dump (EBH) for active sent messages. (thx Fry / KNX Forum)
* Changed telnet connecting log level info from L_NET to L_DBG.
* Added ability to reopen temporary removed serial device. (thx aloz77 / KNX Forum)
  Attention: If the serial device is removed, network socket will be closed too.
* Removed data output format for executed commands. (thx JuMi2006 / KNX Forum)

2013-05-24:
* Added hex type to eb_cmd_encode_value function. (thx Fry / KNX Forum)

2013-05-17:
* Modified eb_serial_valid function and usage. (thx aloz77 / KNX Forum)

2013-05-16:
* Added ability to restrict tcp connection to localhost. (thx aloz77 / KNX Forum)
* Added skip of negative sleep time while waiting for QQ byte. (thx aloz77 / KNX Forum)

2013-05-05:
* Added function checks whether the FD is still a valid serial device.

2013-04-27:
* Improved csv files read in a way that ebus parts are not case sensitive.
* Added eb_cmd_uppercase function.

2013-04-17:
* Changed error messages from daemon startup vom E_ERR to E_ALL.

2013-04-09:
* Extended signal handler to fit with logrotate / logging facility.
* Added ebusd.logrotate.d file too contrib.
* Added gentoo ebusd.init.d and ebusd.conf.d scripts.
* Reverted logging functions too old behavior.

2013-04-08:
* Logging functions changed so it fits together with the behavior of logrotate.